update about page

--- a/src/components/common/MemberCard.astro
+++ b/src/components/common/MemberCard.astro
@@ -39,7 +39,7 @@ const { id, id2, name, title, image, info, company } = Astro.props;
         alt={name}
         width={800}
         height={800}
-        class="w-full h-full max-w-full object-cover rounded-2xl grayscale not-prose member-image"
+        class="w-full h-full max-w-full object-cover rounded-2xl not-prose member-image"
       />
       <h2 class="text-2xl not-prose margin-top:0">{name}</h2>
       <p style="min-height: 3.5em;">{title}</p>
