nav card dropdown

--- a/src/components/nav/NavBar.astro
+++ b/src/components/nav/NavBar.astro
@@ -39,7 +39,7 @@ const navData = await getEntry("data", "nav");
         ]}
       >
         <ul
-          class="flex flex-col lg:flex-row items-start lg:items-center lg:mx-auto max-w-2xl lg:mx-0 w-full lg:max-w-full relative gap-4 lg:gap-0 my-8 lg:my-0 has-[.open]:mb-10"
+          class="flex flex-col lg:flex-row items-start lg:items-center lg:mx-auto max-w-2xl lg:mx-0 w-full lg:max-w-full relative gap-4 lg:gap-0 my-8 lg:my-0"
         >
           {
             navData.data.map((item: any, index: number) =>
