--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -97,12 +97,12 @@ const path = Astro.url.pathname;
   </div>
 
   <!-- LinkedIn Insight Tag -->
-  <script type="text/javascript">
+  <script type="text/plain" data-category="marketing_cookies">
     _linkedin_partner_id = "2545073";
     window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
     window._linkedin_data_partner_ids.push(_linkedin_partner_id);
   </script>
-  <script type="text/javascript">
+  <script type="text/plain" data-category="marketing_cookies">
     (function (l) {
       if (!l) {
         window.lintrk = function (a, b) {
