--- a/src/components/head/GoogleAnalytics.astro
+++ b/src/components/head/GoogleAnalytics.astro
@@ -5,13 +5,15 @@ const { id } = Astro.props;
 <script
   is:inline
   async
-  src={`https://www.googletagmanager.com/gtag/js?id=${id}`}></script>
+  src={`https://www.googletagmanager.com/gtag/js?id=${id}`}
+  type="text/plain"
+  data-category="analytics_cookies"></script>
 
 <script is:inline define:vars={{ id }}>
-window.dataLayer = window.dataLayer || [];
-function gtag() {
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
     window.dataLayer.push(arguments);
-}
-gtag("js", new Date());
-gtag("config", id);
+  }
+  gtag("js", new Date());
+  gtag("config", id);
 </script>
