fix gtm cookie script

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -107,7 +107,7 @@ const social_image = getCldOgImageUrl({
   <meta charset="utf-8" />
   <Cookies />
 
-  <script type="text/plain" category="analytics_cookies">
+  <script type="text/plain" data-category="analytics_cookies">
     (function (w, d, s, l, i) {
       w[l] = w[l] || [];
       w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
